Fix picture container alignment and tweak responsiveness

--- a/src/styles/_constants.scss
+++ b/src/styles/_constants.scss
@@ -1,4 +1,5 @@
 $break-small: 480px;
+$break-xsmall: 480px;
 
 $spacing-unit: 2px;
 $radius: 4px;
