--- a/src/styles/_selectorcontainer.scss
+++ b/src/styles/_selectorcontainer.scss
@@ -1,9 +1,6 @@
 .selector-container {
     display: flex;
-    position: absolute;
-    bottom: 0;
     width: 100%;
-    height: auto;
     background: $dark;
     color: $light;
     flex-wrap: nowrap;
